--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Institute XYZ – Data Portal</title>
 
-    <!-- Tailwind (via CDN for quick prototyping) -->
+    <!-- Tailwind for quick prototyping; swap for a build pipeline later -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="https://fav.farm/📊" />
+
+    <!-- Keycloak JS adapter – **CHANGE THE URL BELOW** to your Keycloak base URL -->
+    <script src="https://dev.edh-cde.unclass.dfo-mpo.gc.ca/auth/js/keycloak.js"></script>
   </head>
   <body class="min-h-screen flex flex-col bg-gray-50 text-gray-800 antialiased">
     <!-- ░░ HEADER ░░ -->
     <header class="bg-indigo-700 text-white shadow">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
-        <h1 class="text-2xl font-extrabold tracking-tight">Institute XYZ</h1>
+        <h1 class="text-2xl font-extrabold tracking-tight">Institute XYZ</h1>
         <nav class="hidden md:block">
           <ul class="flex gap-8 text-sm font-medium">
             <li><a href="#sources" class="hover:text-indigo-200">Sources</a></li>
             <li><a href="#datasets" class="hover:text-indigo-200">Datasets</a></li>
             <li><a href="#about" class="hover:text-indigo-200">About</a></li>
+            <li id="nav-auth" class="hidden"><a href="#" class="hover:text-indigo-200" id="logout-btn">Logout</a></li>
           </ul>
         </nav>
       </div>
@@ -32,7 +36,7 @@
             Discover our science data
           </h2>
           <p class="text-lg sm:text-xl mb-10 opacity-90">
-            Browse open‑access and protected datasets collected by Institute XYZ and the Department of Fisheries & Oceans Canada.
+            Browse open-access and protected datasets collected by Institute XYZ and the Department of Fisheries &amp; Oceans Canada.
           </p>
           <div class="relative max-w-xl mx-auto">
             <input
@@ -65,11 +69,12 @@
             </svg>
             <h4 class="text-xl font-semibold mb-2">Our institute's data</h4>
             <p class="text-gray-600 leading-relaxed">
-              Open datasets curated by Institute XYZ scientists and partners.
+              Open datasets curated by Institute XYZ scientists and partners.
             </p>
           </a>
-          <!-- Tile 2 -->
+          <!-- Tile 2 (requires login) -->
           <a
+            id="btnLogin"
             href="#"
             class="group p-8 rounded-3xl shadow bg-white hover:shadow-xl transition">
             <svg
@@ -81,9 +86,9 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M16 7a4 4 0 11-8 0" />
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 14v7m-4 0h8" />
             </svg>
-            <h4 class="text-xl font-semibold mb-2">DFO's data (login)</h4>
+            <h4 id="btnLoginLabel" class="text-xl font-semibold mb-2">DFO's data (login)</h4>
             <p class="text-gray-600 leading-relaxed">
-              Protected datasets from Fisheries & Oceans Canada (DFO). Requires authentication.
+              Protected datasets from Fisheries &amp; Oceans Canada (DFO). Requires authentication.
             </p>
           </a>
         </div>
@@ -101,22 +106,23 @@
                 <th scope="col" class="px-6 py-4 text-left text-sm font-semibold">Description</th>
               </tr>
             </thead>
-            <tbody class="divide-y divide-gray-200 text-sm">
+            <tbody class="divide-y divide-gray-200 text-sm" id="datasets-body">
+              <!-- Public rows -->
               <tr class="hover:bg-gray-50">
                 <td class="px-6 py-4 whitespace-nowrap">Atlantic cod acoustic survey (2024)</td>
-                <td class="px-6 py-4 whitespace-nowrap">2024‑11‑03</td>
-                <td class="px-6 py-4">High‑resolution acoustic transects capturing cod biomass in the Northwest Atlantic.</td>
+                <td class="px-6 py-4 whitespace-nowrap">2024-11-03</td>
+                <td class="px-6 py-4">High-resolution acoustic transects capturing cod biomass in the Northwest Atlantic.</td>
               </tr>
               <tr class="hover:bg-gray-50">
                 <td class="px-6 py-4 whitespace-nowrap">Sea surface temperature anomalies</td>
-                <td class="px-6 py-4 whitespace-nowrap">2024‑09‑27</td>
+                <td class="px-6 py-4 whitespace-nowrap">2024-09-27</td>
                 <td class="px-6 py-4">Monthly SST anomaly raster for Canadian coastal waters.</td>
               </tr>
-              <!-- Add more rows dynamically with your framework -->
+              <!-- Protected rows will be injected after login -->
             </tbody>
           </table>
         </div>
-        <!-- Pagination -->
+        <!-- Pagination -->
         <div class="mt-8 flex justify-center gap-6 text-sm">
           <button class="px-4 py-2 rounded-lg border shadow disabled:opacity-40">Previous</button>
           <button class="px-4 py-2 rounded-lg border shadow">Next</button>
@@ -128,12 +134,85 @@
     <footer id="about" class="bg-gray-900 text-gray-400">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 text-center space-y-4">
         <p>
-          &copy; 2025 Institute XYZ. All rights reserved.
+          &copy; 2025 Institute XYZ. All rights reserved.
         </p>
         <p class="text-sm opacity-80">
-          Built with <span class="inline-block animate-pulse">❤️</span> & Tailwind CSS.
+          Built with <span class="inline-block animate-pulse">❤️</span> &amp; Tailwind CSS.
         </p>
       </div>
     </footer>
+
+    <!-- ░░ LOGIN / LOGOUT LOGIC ░░ -->
+    <script>
+      // *** CHANGE THESE THREE VALUES TO MATCH YOUR KEYCLOAK SETUP ***
+      const keycloakConfig = {
+        url: 'https://dev.edh-cde.unclass.dfo-mpo.gc.ca/auth', // Keycloak base URL (no trailing slash)
+        realm: 'edh', // Realm name
+        clientId: 'edh-portal' // Client ID registered for this SPA
+      };
+
+      const keycloak = new Keycloak(keycloakConfig);
+
+      // Initialise Keycloak; don't force login on page load
+      keycloak
+        .init({
+          onLoad: 'check-sso',
+          silentCheckSsoRedirectUri: window.location.origin + '/silent-check-sso.html',
+          pkceMethod: 'S256'
+        })
+        .then((authenticated) => {
+          if (authenticated) {
+            // Update UI
+            document.getElementById('btnLoginLabel').textContent = "DFO's data (authenticated)";
+            document.getElementById('btnLogin').classList.add('ring-2', 'ring-indigo-500');
+            document.getElementById('nav-auth').classList.remove('hidden');
+            // Optionally fetch protected datasets
+            loadProtectedDatasets();
+          } else {
+            // Attach click handler to trigger login
+            document.getElementById('btnLogin').addEventListener('click', (ev) => {
+              ev.preventDefault();
+              keycloak.login({ redirectUri: window.location.href });
+            });
+          }
+        })
+        .catch((err) => console.error('Keycloak init failed:', err));
+
+      // Logout link in navbar
+      document.getElementById('logout-btn').addEventListener('click', (ev) => {
+        ev.preventDefault();
+        keycloak.logout({ redirectUri: window.location.origin });
+      });
+
+      // Example function to pull protected datasets from your API
+      async function loadProtectedDatasets() {
+        try {
+          const token = keycloak.token;
+          const response = await fetch(
+            'https://api-proxy-dev.edh-cde.unclass.dfo-mpo.gc.ca/protected/datasets',
+            {
+              headers: {
+                Authorization: 'Bearer ' + token
+              }
+            }
+          );
+          if (!response.ok) throw new Error('API returned ' + response.status);
+          const datasets = await response.json();
+          const tbody = document.getElementById('datasets-body');
+          datasets.forEach((d) => {
+            const row = document.createElement('tr');
+            row.className = 'hover:bg-gray-50';
+            row.innerHTML = `
+              <td class="px-6 py-4 whitespace-nowrap">${d.title}</td>
+              <td class="px-6 py-4 whitespace-nowrap">${d.date}</td>
+              <td class="px-6 py-4">${d.description}</td>
+            `;
+            tbody.appendChild(row);
+          });
+        } catch (err) {
+          console.error('Failed to load protected datasets:', err);
+        }
+      }
+    </script>
   </body>
 </html>
