--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                                 <div id="div-csw-results-glass" class="results-glass"></div>
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link active" id="tab-eccc" data-toggle="tab" href="#tab-csw-results-eccc" role="tab">ECCC CSW</a>
+                                        <a class="nav-link active" id="tab-eccc" data-toggle="tab" href="#tab-csw-results-eccc" role="tab">Our Institute's meta-data</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" id="tab-edh" data-toggle="tab" href="#tab-csw-results-edh" role="tab">EDH CSW (login required)</a>
+                                        <a class="nav-link" id="tab-edh" data-toggle="tab" href="#tab-csw-results-edh" role="tab">DFO's Enterprise Data Hub meta-data</a>
                                     </li>
                                 </ul>
                                 <div class="tab-content">
@@ -460,7 +460,7 @@
                         return;
                     }
                     var activeTabId = $('.nav-tabs .active').attr('id');
-                    if (activeTabId === 'tab-edh') {
+                    if (activeTabId === "tab-edh") {
                         search("EDH", nextrecord2);
                     } else {
                         search("ECCC", nextrecord2);
